--- a/crewaiFlowsBackend/requirements.txt
+++ b/crewaiFlowsBackend/requirements.txt
@@ -1,8 +1,29 @@
-crewai==0.76.2
-crewai-tools==0.13.2
-pydantic==2.9.2
-mysql-connector-python==9.1.0
-fastapi==0.115.0
-uvicorn==0.31.0
-redis==5.2.0
-celery==5.4.0
+# 核心框架
+fastapi==0.95.2
+uvicorn==0.22.0
+celery==5.3.4
+redis==5.0.1
+pydantic==2.4.2
+python-dotenv==1.0.0
+
+# LLM相关依赖
+openai==1.3.7
+langchain==0.0.335
+langchain-openai==0.0.2
+langchain-anthropic==0.1.1
+anthropic==0.8.1
+
+# CrewAI框架
+crewai==0.28.5
+crewai-tools==0.1.6
+
+# 工具依赖
+requests==2.31.0
+httpx==0.24.1
+pytest==7.4.0
+pillow==10.0.1
+
+# 小红书相关可选依赖
+bs4==0.0.1
+pandas==2.1.1
+selenium==4.15.2
