--- a/crewaiFlowsBackend/crews/contentCreationAgent/config/tasks.yaml
+++ b/crewaiFlowsBackend/crews/contentCreationAgent/config/tasks.yaml
@@ -29,15 +29,18 @@
 
 content_creation_task:
   description: >
-    创作完整的内容：
-    1. 基于既定结构展开写作
-    2. 融入个性化表达
-    3. 注重逻辑连贯性
-    4. 增加互动性元素
-    5. 优化文案节奏
+    创建高质量小红书内容：
+    1. 基于平台趋势和竞品分析确定选题
+    2. 设计符合目标受众需求的内容结构
+    3. 撰写引人入胜的标题和内容
+    4. 规划图片/视频呈现方式
+    5. 设计互动引导和话题标签
   expected_output: >
-    一份完整的内容草稿，包含文案和图片建议
-  agent: copywriter
+    完整的内容创作方案，包含标题、正文、图片/视频建议和互动引导
+  agent: content_creator
+  context:
+    - platform_trend_decoding_task
+    - content_style_analysis_task
 
 # visual_recommendation_task:
 #   description: >
