--- a/crewaiFlowsBackend/requirements.txt
+++ b/crewaiFlowsBackend/requirements.txt
@@ -6,6 +6,12 @@ redis==5.0.1
 pydantic==2.4.2
 python-dotenv==1.0.0
 
+# 数据库相关
+sqlalchemy==2.0.23
+alembic==1.13.1
+mysql-connector-python==8.2.0
+pymysql==1.1.0
+
 # LLM相关依赖
 openai==1.3.7
 langchain==0.0.335
